--- a/common/randseq_dsp.tex
+++ b/common/randseq_dsp.tex
@@ -421,35 +421,77 @@ Let $\opS$ be the \structe{system} illustrated to the right.
     \\(B).& $\rvx(n)$ is &\prope{WSS}       & 
   \end{array}}
   \implies
-  \brb{\begin{array}{rcl}
-    \Swwy(\omega) &=& \fG(\omega)\Swxy(\omega)
+  \brb{\begin{array}{rc>{\ds}lDD}
+    \Rwy(m) &=&    \sum_{n\in\Z}\fg(n)\Rxy(m-n) 
+          \\&\eqd& \fg(n)\convd\Rxy(m-n)
+            && (\ope{convolution})
   \end{array}}
   }
 \\
 \begin{proof}
 \begin{align*}
-  \Swwy(\omega)
-    &\eqd \opDTFT\Rwy(m)
-    && \text{by definition of $\Swxy$}
-    && \text{\xref{def:Swxy}}
-  \\&\eqd \opDTFT\pE\brs{\rvw(m)\rvy^\ast(0)}
+  \Rwy(m)
+  \\&\eqd \pE\brs{\rvw(m)\rvy^\ast(0)}
     && \text{by definition of $\Rxy$}
     && \text{\xref{def:Rxym}}
-  \\&= \opDTFT\pE\brs{\sum_{n\in\Z}\fg(n)\rvx(m-n)\rvy^\ast(0)}
+  \\&= \pE\brs{\sum_{n\in\Z}\fg(n)\rvx(m-n)\rvy^\ast(0)}
+    && \text{by \prope{LTI} hypothesis}
+    && \text{(A)}
+  \\&= \sum_{n\in\Z}\fg(n)\pE\brs{\rvx(m-n)\rvy^\ast(0)}
+    && \text{by \prope{linearity}}
+    && \text{\xref{def:linop}}
+  \\&= \sum_{n\in\Z}\fg(n)\Rxy(m-n)
     && \text{by definition of $\Rxy$}
     && \text{\xref{def:Rxym}}
-  \\&= \opDTFT\sum_{n\in\Z}\fg(n)\pE\brs{\rvx(m-n)\rvy^\ast(0)}
-  \\&= \opDTFT\sum_{n\in\Z}\fg(n)\Rxy(m-n)
-    && \text{by definition of $\Rxy$}
-    && \text{\xref{def:Rxym}}
-  \\&= \opDTFT\brs{\fg(n)\convd\Rxy(m-n)}
+  \\&= \brs{\fg(n)\convd\Rxy(m-n)}
     && \text{by definition of \ope{convolution}}
     && \text{\xref{def:dsp_conv}}
-  \\&= \fG(\omega)\Sxy(\omega)
-    && \text{by \thme{convolution theorem}}
+  \\&= \FG(\omega)\Sxy(\omega)
+    && \text{by \thme{Convolution Theorem}}
     && \text{\xref{thm:conv}}
 \end{align*}
 \end{proof}
+
+%---------------------------------------
+\begin{corollary}
+\label{cor:xGw_xHy}
+%---------------------------------------
+Let $\opS$ be the \structe{system} illustrated in \prefpp{thm:xGw_xHy}.
+\corbox{
+  \brb{\begin{array}{M}
+    hypotheses of \prefpp{thm:xGw_xHy}
+  \end{array}}
+  \implies
+  \brb{\begin{array}{Frc>{\ds}lD}
+      (1).&\Szwy(z)      &=& \FG(z)     \Szxy(z)
+    \\(2).&\Swwy(\omega) &=& \FG(\omega)\Swxy(\omega)
+  \end{array}}
+  }
+\end{corollary}
+%\\
+%\begin{proof}
+%\begin{align*}
+%  \Swwy(m)
+%  \\&\eqd \pE\brs{\rvw(m)\rvy^\ast(0)}
+%    && \text{by definition of $\Rxy$}
+%    && \text{\xref{def:Rxym}}
+%  \\&= \pE\brs{\sum_{n\in\Z}\fg(n)\rvx(m-n)\rvy^\ast(0)}
+%    && \text{by \prope{LTI} hypothesis}
+%    && \text{(A)}
+%  \\&= \sum_{n\in\Z}\fg(n)\pE\brs{\rvx(m-n)\rvy^\ast(0)}
+%    && \text{by \prope{linearity}}
+%    && \text{\xref{def:linop}}
+%  \\&= \sum_{n\in\Z}\fg(n)\Rxy(m-n)
+%    && \text{by definition of $\Rxy$}
+%    && \text{\xref{def:Rxym}}
+%  \\&= \brs{\fg(n)\convd\Rxy(m-n)}
+%    && \text{by definition of \ope{convolution}}
+%    && \text{\xref{def:dsp_conv}}
+%  \\&= \FG(\omega)\Sxy(\omega)
+%    && \text{by \thme{Convolution Theorem}}
+%    && \text{\xref{thm:conv}}
+%\end{align*}
+%\end{proof}
 
 
 %=======================================
