--- a/common/systemid.tex
+++ b/common/systemid.tex
@@ -382,12 +382,14 @@ Let $\norm{\rvx}\eqd\pE\brs{\rvx\rvx^\ast}$.
     &\eqd \norm{\FW(\omega)-\FQ(\omega)}^2
   \\&\eqd \inprod{\FW(\omega)-\FQ(\omega)}{\FW(\omega)-\FQ(\omega)}
   \\&\eqd \pE\brp{\brs{\FW(\omega)-\FQ(\omega)}\brs{\FW(\omega)-\FQ(\omega)}^\ast}
-  \\&=    \pE\brs{\FW(\omega)\FW^\ast(\omega)} 
+  \\&=\mathrlap{
+          \pE\brs{\FW(\omega)\FW^\ast(\omega)} 
         - \pE\brs{\FW(\omega)\FQ^\ast(\omega)} 
         - \pE\brs{\FQ(\omega)\FW^\ast(\omega)} 
         + \pE\brs{\FQ(\omega)\FQ^\ast(\omega)} 
+       }
   \\&= \Swww(\omega) - \Swwq(\omega) - \Swwq^\ast(\omega) + \Swqq(\omega)
-    \qquad\text{by \thme{Wiener-Kinchin relationship}}
+    && \text{by \thme{Wiener-Kinchin relationship}}
   \\&= \Swww(\omega) - \Swwy(\omega) - \Swwy^\ast(\omega) + \Swyy(\omega)-\Swvv(\omega)
   \\&= \Swxx(\omega)\abs{\estH(\omega)}^2 - \estH(\omega)\Swyx(\omega) - \estH^\ast(\omega)\Swyx^\ast(\omega) + \Swyy(\omega)-\Swvv(\omega)
   \\
