Additive noise development

--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1658,39 +1658,49 @@
 %--------------------------------------
 \newcommand{\Rxx}    [1][xx] {\mathfnct{R}_{\mathsfup{#1}}}  % Autocorrelation function
 \newcommand{\Sxx}    [1][xx] {\mathfnct{S}_{\mathsfup{#1}}}  % spectral density
-\newcommand{\Swxx}   [1][xx] {\tilde{\mathfnct{S}}_{\mathsfup{#1}}}  % spectral density
-\newcommand{\Swuu}   {\Swxx[uu]}
-\newcommand{\Swvv}   {\Swxx[vv]}
-\newcommand{\Swyy}   {\Swxx[yy]}
-\newcommand{\Swxy}   {\Swxx[xy]}
-\newcommand{\Swsy}   {\Swxx[sy]}
-\newcommand{\Swyx}   {\Swxx[yx]}
-\newcommand{\Swyu}   {\Swxx[yu]}
-\newcommand{\Swyv}   {\Swxx[yv]}
-\newcommand{\Swuy}   {\Swxx[uy]}
-\newcommand{\Swxv}   {\Swxx[xv]}
-\newcommand{\Swww}   {\Swxx[ww]}
-\newcommand{\Swwx}   {\Swxx[wx]}
-\newcommand{\Swxw}   {\Swxx[xw]}
-\newcommand{\Swxq}   {\Swxx[xq]}
-\newcommand{\Swrq}   {\Swxx[rq]}
-\newcommand{\Swrx}   {\Swxx[rx]}
-\newcommand{\Swqx}   {\Swxx[qx]}
-\newcommand{\Swqq}   {\Swxx[qq]}
-\newcommand{\Swpq}   {\Swxx[pq]}
-\newcommand{\Swqp}   {\Swxx[qp]}
-\newcommand{\Swwy}   {\Swxx[wy]}
-\newcommand{\Swyw}   {\Swxx[yw]}
-\newcommand{\Swwq}   {\Swxx[wq]}
-\newcommand{\Swqw}   {\Swxx[qw]}
-\newcommand{\Swry}   {\Swxx[ry]}
 
-\newcommand{\Swphi}  {\Swxx[\phi\phi]}
-\newcommand{\Swpsi}  {\Swxx[\psi\psi]}
-\newcommand{\Swfg}   {\Swxx[fg]}
-\newcommand{\Swgf}   {\Swxx[gf]}
-\newcommand{\Swff}   {\Swxx[ff]}
-\newcommand{\Swgg}   {\Swxx[gg]}
+
+\newcommand{\Sw}   [1]{\tilde{\mathfnct{S}}_{\mathsfup{#1}}}  % spectral density
+\newcommand{\Swxx}   [1][xx] {\tilde{\mathfnct{S}}_{\mathsfup{#1}}}  % spectral density
+\newcommand{\Swuu}   {\Sw{uu}}
+\newcommand{\Swvv}   {\Sw{vv}}
+\newcommand{\Swyy}   {\Sw{yy}}
+\newcommand{\Swxy}   {\Sw{xy}}
+\newcommand{\Swsx}   {\Sw{sx}}
+\newcommand{\Swsy}   {\Sw{sy}}
+\newcommand{\Swyx}   {\Sw{yx}}
+\newcommand{\Swyu}   {\Sw{yu}}
+\newcommand{\Swyv}   {\Sw{yv}}
+\newcommand{\Swuy}   {\Sw{uy}}
+\newcommand{\Swxv}   {\Sw{xv}}
+\newcommand{\Swww}   {\Sw{ww}}
+\newcommand{\Swwx}   {\Sw{wx}}
+\newcommand{\Swxw}   {\Sw{xw}}
+\newcommand{\Swxq}   {\Sw{xq}}
+\newcommand{\Swrq}   {\Sw{rq}}
+\newcommand{\Swrx}   {\Sw{rx}}
+\newcommand{\Swqx}   {\Sw{qx}}
+\newcommand{\Swqq}   {\Sw{qq}}
+\newcommand{\Swwy}   {\Sw{wy}}
+\newcommand{\Swyw}   {\Sw{yw}}
+\newcommand{\Swwq}   {\Sw{wq}}
+\newcommand{\Swqw}   {\Sw{qw}}
+\newcommand{\Swry}   {\Sw{ry}}
+\newcommand{\Swyr}   {\Sw{yr}}
+\newcommand{\Swpy}   {\Sw{py}}
+\newcommand{\Swyp}   {\Sw{yp}}
+\newcommand{\Swpq}   {\Sw{pq}}
+\newcommand{\Swqp}   {\Sw{qp}}
+\newcommand{\Swsq}   {\Sw{sq}}
+\newcommand{\Swqs}   {\Sw{qs}}
+\newcommand{\Swpp}   {\Sw{pp}}
+
+\newcommand{\Swphi}  {\Sw{\phi\phi}}
+\newcommand{\Swpsi}  {\Sw{\psi\psi}}
+\newcommand{\Swfg}   {\Sw{fg}}
+\newcommand{\Swgf}   {\Sw{gf}}
+\newcommand{\Swff}   {\Sw{ff}}
+\newcommand{\Swgg}   {\Sw{gg}}
 \newcommand{\Swn}   [1][n] {{\tilde{S}_{{#1}}}}
 \newcommand{\Sww}    {\Sxx[ww]}
 
@@ -1717,6 +1727,7 @@
 \newcommand{\Ryx} {\Rxx[yx]}
 \newcommand{\Ruu} {\Rxx[uu]}
 \newcommand{\Rpy} {\Rxx[py]}
+\newcommand{\Rsx} {\Rxx[sx]}
 \newcommand{\Rsy} {\Rxx[sy]}
 \newcommand{\Rwy} {\Rxx[wy]}
 \newcommand{\Ryw} {\Rxx[yw]}
@@ -1762,32 +1773,43 @@
 \newcommand{\ZSyx}   {\ZSxx[yx]} % Cross-correlation function
 \newcommand{\Szphi}  {\ZSxx[\phi\phi]}
 \newcommand{\Szpsi}  {\ZSxx[\psi\psi]}
-\newcommand{\Szfg}   {\ZSxx[fg]}
-\newcommand{\Szff}   {\ZSxx[ff]}
 
-\newcommand{\Szxx}   [1][xx] {\hat{\mathfnct{S}}_{\mathsfup{#1}}}  % z-domain spectral density
-\newcommand{\Szuu}   {\Szxx[uu]}
-\newcommand{\Szvv}   {\Szxx[vv]}
-\newcommand{\Szyy}   {\Szxx[yy]}
-\newcommand{\Szxy}   {\Szxx[xy]}
-\newcommand{\Szyx}   {\Szxx[yx]}
-\newcommand{\Szyu}   {\Szxx[yu]}
-\newcommand{\Szyv}   {\Szxx[yv]}
-\newcommand{\Szrx}   {\Szxx[rx]}
-\newcommand{\Szsy}   {\Szxx[sy]}
-\newcommand{\Szuy}   {\Szxx[uy]}
-\newcommand{\Szxv}   {\Szxx[xv]}
-\newcommand{\Szww}   {\Szxx[ww]}
-\newcommand{\Szwx}   {\Szxx[wx]}
-\newcommand{\Szxw}   {\Szxx[xw]}
-\newcommand{\Szxq}   {\Szxx[xq]}
-\newcommand{\Szqx}   {\Szxx[qx]}
-\newcommand{\Szqq}   {\Szxx[qq]}
-\newcommand{\Szwy}   {\Szxx[wy]}
-\newcommand{\Szyw}   {\Szxx[yw]}
-
-
-
+%\newcommand{\Szxx}   [1][xx] {\hat{\mathfnct{S}}_{\mathsfup{#1}}}  % z-domain spectral density
+\newcommand{\Sz}[1]{\hat{\mathfnct{S}}_{\mathsfup{#1}}}  % z-domain spectral density
+\newcommand{\Szxx}   {\Sz{xx}}
+\newcommand{\Szuu}   {\Sz{uu}}
+\newcommand{\Szvv}   {\Sz{vv}}
+\newcommand{\Szyy}   {\Sz{yy}}
+\newcommand{\Szxy}   {\Sz{xy}}
+\newcommand{\Szyx}   {\Sz{yx}}
+\newcommand{\Szyu}   {\Sz{yu}}
+\newcommand{\Szyv}   {\Sz{yv}}
+\newcommand{\Szrx}   {\Sz{rx}}
+\newcommand{\Szsx}   {\Sz{sx}}
+\newcommand{\Szsy}   {\Sz{sy}}
+\newcommand{\Szry}   {\Sz{ry}}
+\newcommand{\Szyr}   {\Sz{yr}}
+\newcommand{\Szpy}   {\Sz{py}}
+\newcommand{\Szyp}   {\Sz{yp}}
+\newcommand{\Szpq}   {\Sz{pq}}
+\newcommand{\Szqp}   {\Sz{qp}}
+\newcommand{\Szuy}   {\Sz{uy}}
+\newcommand{\Szxv}   {\Sz{xv}}
+\newcommand{\Szww}   {\Sz{ww}}
+\newcommand{\Szwx}   {\Sz{wx}}
+\newcommand{\Szxw}   {\Sz{xw}}
+\newcommand{\Szxq}   {\Sz{xq}}
+\newcommand{\Szqx}   {\Sz{qx}}
+\newcommand{\Szqq}   {\Sz{qq}}
+\newcommand{\Szwy}   {\Sz{wy}}
+\newcommand{\Szyw}   {\Sz{yw}}
+\newcommand{\Szsq}   {\Sz{sq}}
+\newcommand{\Szqs}   {\Sz{qs}}
+\newcommand{\Szfg}   {\Sz{fg}}
+\newcommand{\Szff}   {\Sz{ff}}
+\newcommand{\Szrq}   {\Sz{rq}}
+\newcommand{\Szqr}   {\Sz{qr}}
+\newcommand{\Szpp}   {\Sz{pp}}
 
 \newcommand{\Cxy}{\mathfnct{C}_{\mathsfup{xy}}}  % coherence function
 
