Breakthrough on least-squares estimator H1 proof. Praise the Lord!!!

--- a/common/randseq_addnoise.tex
+++ b/common/randseq_addnoise.tex
@@ -26,7 +26,7 @@ Let $\opS$ be the \structe{system} illustrated to the right:
   \implies
   \brbl{\begin{array}{Frcl}
       (1).&\Ryv(m)       &=&                 \Rvv(m) \quad\text{\scs and}
-    \\(2).&\Ryy(m)       &=& \Rxx(m)       + \Rvv(m)             
+    \\(2).&\Ryy(m)       &=& \Rxx(m)       + \Rvv(m)
   \end{array}}
   }
 \\
@@ -376,7 +376,7 @@ Let $\opS$ be the \structe{system} illustrated to the right.
 Let $\opS$ be the \structe{system} illustrated in \prefpp{thm:sysH_addnoise}.
 \corbox{
   \brb{\begin{array}{M}
-    hypotheses of\\ 
+    hypotheses of\\
     \prefpp{thm:sysH_addnoise}
   \end{array}}
   \implies
@@ -420,13 +420,13 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{thm:sysH_addnoise}.
 %---------------------------------------
 Let $\opS$ be the \structe{system} illustrated in \prefpp{thm:sysH_addnoise}.
 \corbox{
-  \brbr{\begin{array}{FM}
-      (A).& $\fh$ is \prope{LTI} \scs and         
-    \\(B).& hypotheses of                         
-                          \pref{thm:sysH_addnoise}
+  \brb{\begin{array}{FM}
+      (A).& $\fh$ is \prope{LTI} \scs and
+    \\(B).& hypotheses of
+        \\& \pref{thm:sysH_addnoise}
   \end{array}}
   \implies
-  \brbl{\begin{array}{FrclD}
+  \brb{\begin{array}{FrclD}
       (1).&\Szyy(z)      &=& \brs{\Szxx(z)     -\Szuu(z)}\ZH(z)\ZH\brp{\frac{1}{z^\ast}} + \Szvv(z)   & and
     \\(2).&\Swyy(\omega) &=& \brs{\Swxx(\omega)-\Swuu(\omega)}\abs{\FH(\omega)}^2 + \Swvv(\omega)     & and
     \\(3).&\Szxy(z)      &=& \brs{\Szxx(z)     -\Szuu(z)}     \ZH^\ast\brp{\frac{1}{z^\ast}}          & and
@@ -486,7 +486,7 @@ Let $\opS$ be the \structe{system} illustrated to the right.
   \implies
   \brb{\begin{array}{rcl}
     \Szsy(z) &=& \Szsq(z) = \Szry(z) = \Szrq(z)
-           \\&=& \ZG(z)\Szxy(z) 
+           \\&=& \ZG(z)\Szxy(z)
   \end{array}}
   }
 \\
@@ -513,14 +513,14 @@ Let $\opS$ be the \structe{system} illustrated to the right.
 Let $\opS$ be the \structe{system} illustrated in \prefpp{cor:GHz}.
 \\
 \corbox{
-  \brb{\begin{array}{FMMD}
+  \brb{\begin{array}{M}
     hypotheses of\\
     \prefpp{cor:GHz}
   \end{array}}
   \implies
   \brb{\begin{array}{rcl}
     \Swsy(\omega) &=& \Swsq(\omega) = \Swry(\omega) = \Swrq(\omega)
-                \\&=& \FG(\omega)\Swxy(\omega) 
+                \\&=& \FG(\omega)\Swxy(\omega)
   \end{array}}
   }
 \end{corollary}
