--- a/common/systemid.tex
+++ b/common/systemid.tex
@@ -378,42 +378,45 @@ Let $\norm{\rvx}\eqd\pE\brs{\rvx\rvx^\ast}$.
         - \pE\brs{\FQ(\omega)\FW^\ast(\omega)} 
         + \pE\brs{\FQ(\omega)\FQ^\ast(\omega)} 
        }
-  \\&= \Swww(\omega) - \Swwq^\ast(\omega) - \Swwq(\omega) + \Swqq(\omega)
-    && \text{by \thme{Wiener-Kinchin relationship}}
-  \\&= \Swxx(\omega)\abs{\estH(\omega)}^2 - \brs{\estH(\omega)\Swxy(\omega)}^\ast - \estH(\omega)\Swxy(\omega) + \Swqq(\omega)
+  \\&= \Swww(\omega) - \Swwq(\omega) - \Swwq^\ast(\omega) + \Swqq(\omega)
+    %&& \text{by \thme{Wiener-Kinchin relationship}}
+  \\&= \Swxx(\omega)\abs{\estH(\omega)}^2 
+     - \estH(\omega)\Swxy(\omega)
+     - \brs{\estH(\omega)\Swxy(\omega)}^\ast
+     + \Swqq(\omega)
     && \text{by \prefpp{cor:GHz}}
   \\
   0
-    &= \pderiv{}{\estH}\fCost\brp{\estH} 
-  \\&= \pderiv{}{\estH}
-       \brp{\Swxx\abs{\estH}^2 - \estH\Swyx - \estH^\ast\Swyx^\ast + \Swqq}
-  \\&= \pderiv{}{\estH}
-       \brp{\Swxx\abs{\estH}^2 - \estH\Swyx - \estH^\ast\Swyx^\ast + \cancelto{0}{\Swqq}}
-    && \text{because $\Swqq$ does not vary with $\estH$}
-  \\&= \brs{\begin{array}{c}\pderiv{}{\estH_R}\\\pderiv{}{\estH_I}\end{array}}
-       \brp{\Swxx\abs{\estH}^2 - \estH\Swyx - \estH^\ast\Swyx^\ast}
-  \\&= \brs{\begin{array}{c}\pderiv{}{\estH_R}\\\pderiv{}{\estH_I}\end{array}}
-       \brp{\Swxx\abs{\estH}^2 - \estH\Swyx - \estH^\ast\Swyx^\ast}
-  \\&=\mathrlap{
-       \brs{\begin{array}{c}\pderiv{}{\estH_R}\\\pderiv{}{\estH_I}\end{array}}
-       \Swxx\brp{\estH_R^2+\estH_I^2} 
-     - \brs{\begin{array}{c}\pderiv{}{\estH_R}\estH_R\Re\Swxy\\\pderiv{}{\estH_I}(-\estH_I)(-\Im\Swxy)\end{array}}
-     - \brs{\begin{array}{c}\pderiv{}{\estH_R}\estH_R\Re\Swxy\\\pderiv{}{\estH_I}  \estH_I   \Im\Swxy \end{array}}
-     }
-  \\&= \brs{\begin{array}{c}2\Swxx\estH_R\\2\Swxx\estH_I\end{array}}
-     - \brs{\begin{array}{c}\Re\Swyx\\\Im\Swyx\end{array}}
-     - \brs{\begin{array}{c}\Re\Swyx\\\Im\Swyx\end{array}}
-  \\&= 2\Swxx\brs{\begin{array}{c}\estH_R\\\estH_I\end{array}}
-     - 2\brs{\begin{array}{c}\Re\Swyx\\\Im\Swyx\end{array}}
-  \\\implies 0
-    &= 2\Swxx(\omega)\estH(\omega) - 2\Swyx(\omega)
-  \\\implies \estH(\omega)
-    &= \frac{\Swyx(\omega)}{\Swxx(\omega)}
+    &= \pderiv{}{\estH_R}\fCost\brp{\estH} 
+  \\&= \pderiv{}{\estH_R}
+       \brp{\Swxx\abs{\estH}^2 - \estH\Swxy - \estH^\ast\Swxy^\ast + \Swqq}
+  \\&= \pderiv{}{\estH_R}
+       \brp{\Swxx\brs{\estH_R^2+\estH_I^2} - (\estH_R+i\estH_I)\Swxy - (\estH_R+i\estH_I)^\ast\Swxy^\ast + \Swqq}
+  \\&= 2\estH_R\Swxx - \Swxy - \Swxy^\ast + \cancelto{0}{\Swqq}
+  \\&= 2\estH_R\Swxx - 2\Re\Swxy
+  \\&= 2\estH_R\Swxx - 2\Re\Swyx
+  \\&\implies \estH_R = \frac{\Re\Swyx}{\Swxx}
+  \\
+  0
+    &= \pderiv{}{\estH_I}\fCost\brp{\estH} 
+  \\&= \pderiv{}{\estH_I}
+       \brp{\Swxx\abs{\estH}^2 - \estH\Swxy - \estH^\ast\Swxy^\ast + \Swqq}
+  \\&= \pderiv{}{\estH_I}
+       \brp{\Swxx\brs{\estH_R^2+\estH_I^2} - (\estH_I+i\estH_I)\Swxy - (\estH_I-i\estH_I)\Swxy^\ast + \Swqq}
+  \\&= 2\estH_I\Swxx - i\Swxy + i\Swxy^\ast + \cancelto{0}{\Swqq}
+  \\&= 2\estH_I\Swxx - 2i(i\Im\Swxy)
+  \\&= 2\estH_I\Swxx + 2i(i\Im\Swyx)
+  \\&= 2\estH_I\Swxx - 2\Im\Swyx
+  \\&\implies \estH_I = \frac{\Im\Swyx}{\Swxx}
+  \\
+  \\
+  \estH 
+    &= \estH_R + i\estH_I
+  \\&= \frac{\Re\Swyx}{\Swxx} + \frac{i\Im\Swyx}{\Swxx}
+  \\&= \frac{\Re\Swyx + i\Im\Swyx}{\Swxx}
+  \\&= \frac{\Swyx}{\Swxx}
 \end{align*}
 \end{proof}
-
-
-
 
 \begin{figure}
   \centering%
